-- noinspection SqlNoDataSourceInspectionForFile

CREATE TABLE Users
(
    userId    INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username  VARCHAR(20) UNIQUE,
    firstName VARCHAR(50),
    lastName  VARCHAR(50),
    email     VARCHAR(100),
    password  VARCHAR(256),
    address   VARCHAR(200),
    isGuest   BOOLEAN DEFAULT FALSE,
    isAdmin   BOOLEAN DEFAULT FALSE
);

CREATE TABLE Products
(
    productId   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(100),
    description VARCHAR(500),
    category    VARCHAR(50),
    brand       VARCHAR(50),
    price       DECIMAL(10, 2),
    quantity    INT
);

CREATE TABLE Orders
(
    orderId     INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    userId      INT,
    orderDate   DATE,
    totalAmount DECIMAL(10, 2),
    FOREIGN KEY (userId) REFERENCES Users (userId)
);

CREATE TABLE Order_Items
(
    orderItemId INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    orderId     INT,
    productId   INT,
    quantity    INT,
    amount      DECIMAL(10, 2),
    FOREIGN KEY (orderId) REFERENCES Orders (orderId),
    FOREIGN KEY (productId) REFERENCES Products (productId)
);

CREATE TABLE Carts
(
    cartId INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    userId INT,
    FOREIGN KEY (userId) REFERENCES Users (userId)
);

CREATE TABLE Cart_Items
(
    cartItemId INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cartId     INT,
    productId  INT,
    quantity   INT,
    FOREIGN KEY (cartId) REFERENCES Carts (cartId),
    FOREIGN KEY (productId) REFERENCES Products (productId)
);

------------- Dummy Data -------------

-- Users
INSERT INTO Users (userId, username, firstName, lastName, email, password, isAdmin)
VALUES (1, 'john123', 'John', 'Doe', 'john@example.com',
        '$s0$e0801$ZfCnHLn2aCZuPMjNcgFfRg==$/tT/0Z7W2qfI5jFXwDf/u0UlLnFbufxuUKSjD2gGllo=', FALSE), --password123
       (2, 'jane456', 'Jane', 'Doe', 'jane@example.com',
        '$s0$e0801$mKgNnLo2TVWkD1euIvDxsg==$ln7O96ik/BQyjQLldvSpXqLISy3AMoXoOlcG0Lh4KKY=', FALSE), --password456
       (3, 'bob789', 'Bob', 'Smith', 'bob@example.com',
        '$s0$e0801$WYu8BKezCd2YvQrtAtRweA==$CNbQ3sG7aLdgOjsZozoqzJ1mt3pBN354uHxdIxr2WNg=', FALSE), --password789
       (4, 'sarah101', 'Sarah', 'Johnson', 'sarah@example.com',
        '$s0$e0801$5qEFYa4sonKRDIznTdA+jg==$ngJ2ohoMPCKaX25APYJOIopfu24WpcwEGSzZ4xaCYGs=', FALSE), --password101
       (5, 'mike234', 'Mike', 'Williams', 'mike@example.com',
        '$s0$e0801$dfLqYlqG/7B97U9iP5WdAQ==$Y9L6nmbRYNVtRmwNAM2NoTsiNxp0WmayJqSQinw6vCk=', TRUE);
--password234

-- Products
INSERT INTO Products (productId, name, description, category, brand, price, quantity)
VALUES (1, 'T-Shirt', 'Cotton t-shirt, various colors', 'Apparel', 'BrandCo', 19.99, 10),
       (2, 'Jeans', 'Blue denim jeans', 'Apparel', 'ClothCo', 49.99, 15),
       (3, 'Backpack', 'Canvas backpack for school', 'Bags', 'BagShop', 39.99, 20),
       (4, 'Smart Phone', 'Latest model smartphone', 'Electronics', 'PhoneMaker', 499.99, 5),
       (5, 'Bluetooth Speaker', 'Portable wireless speaker', 'Electronics', 'SpeakerCorp', 99.99, 12);

-- Orders
INSERT INTO Orders (orderId, userId, totalAmount)
VALUES (1, 1, 99.99),
       (2, 2, 249.98),
       (3, 3, 199.98),
       (4, 4, 149.98),
       (5, 5, 599.95);

-- Order_Items
INSERT INTO Order_Items (orderItemId, orderId, productId, quantity, amount)
VALUES (1, 1, 1, 1, 19.99),
       (2, 2, 2, 2, 99.98),
       (3, 3, 3, 1, 39.99),
       (4, 4, 4, 1, 499.99),
       (5, 5, 5, 2, 199.98);

-- Carts
INSERT INTO Carts (cartId, userId)
VALUES (1, 1),
       (2, 2),
       (3, 3),
       (4, 4),
       (5, 5);

-- Cart_Items
INSERT INTO Cart_Items (cartItemId, cartId, productId, quantity)
VALUES (1, 1, 1, 2),
       (2, 1, 3, 1),
       (3, 2, 2, 1),
       (4, 3, 4, 3),
       (5, 4, 5, 2);